--- a/index.html
+++ b/index.html
@@ -1,46 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Minimal Site</title>
-
-  <!-- Google Analytics (GA4) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'G-XXXXXXXXXX');
-  </script>
-
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      text-align: center;
-      padding: 50px;
-    }
-    #number {
-      font-size: 72px;
-      font-weight: bold;
-      margin-bottom: 50px;
-    }
-    #map {
-      max-width: 600px;
-      margin: 0 auto;
-    }
-  </style>
+  <title>Test Page</title>
 </head>
 <body>
-
-  <!-- Display your number -->
-  <div id="number">123</div>
-
-  <!-- Google Analytics map (visitor visualization) -->
-  <div id="map">
-    <!-- GA4 doesn’t provide a direct embeddable map; you’ll need to view it in GA dashboard -->
-    <p>Visit your Google Analytics dashboard to view the visitor map.</p>
-  </div>
-
+  <h1>Hello, GitHub Pages!</h1>
 </body>
 </html>
