--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Minimal Site</title>
 
-<!--   <!-- Google Analytics (GA4) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'G-XXXXXXXXXX');
-  </script> -->
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-LYD4Z0K9DP"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-LYD4Z0K9DP');
+</script>
 
   <style>
     body {
@@ -25,22 +26,12 @@
       font-weight: bold;
       margin-bottom: 50px;
     }
-    #map {
-      max-width: 600px;
-      margin: 0 auto;
-    }
   </style>
 </head>
 <body>
 
   <!-- Display your number -->
   <div id="number">123</div>
-
-  <!-- Google Analytics map (visitor visualization) -->
-  <div id="map">
-    <!-- GA4 doesn’t provide a direct embeddable map; you’ll need to view it in GA dashboard -->
-    <p>Visit your Google Analytics dashboard to view the visitor map.</p>
-  </div>
 
 </body>
 </html>
