--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
   <!-- Google tag (gtag.js) goes right here -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-LYD4Z0K9DP"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-10XLB9SS54"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-    gtag('config', 'G-LYD4Z0K9DP');
+    gtag('config', 'G-10XLB9SS54');
   </script>
 
   <meta charset="UTF-8">
