--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
   <!-- Display your number -->
   <div id="number">123</div>
 <script>
-  fetch("https://script.google.com/macros/s/AKfycbz9lSKDzbLJ-0SNaYi_b56jG2Hduo42oeNG9nFF81l0ypGh4RzQq_ivCepS0RgJj1Fb/exec?page=" + encodeURIComponent(location.pathname) + "&ua=" + encodeURIComponent(navigator.userAgent));
+  fetch("https://script.google.com/macros/AKfycbyIvTUZYBHtCMDJDI1Rw6sz_Fj8c1JL-Wvk1vanyos4E4nCUq302MwrvFpJ8_DuVtsc/exec?page=" + encodeURIComponent(location.href) + "&ua=" + encodeURIComponent(navigator.userAgent));
 </script>
+
 
 </body>
 </html>
