--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
   
 <body>
   <div id="number">123</div>
-  
-  <script>
+  <img src="https://6c95d3b9d2c3.ngrok-free.app/track" width="1" height="1" style="display:none;" />
+
+<!--   <script>
   fetch("https://api.ipify.org?format=json")
     .then(res => res.json())
     .then(data => {
@@ -32,6 +33,7 @@
                    + "&ip=" + encodeURIComponent(ip));
     })
     .catch(err => console.error("Logging failed:", err));
-</script>
+</script> -->
+
 </body>
 </html>
