--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
   
 <body>
   <div id="number">123</div>
-  <img src="https://555b2c665f8b.ngrok-free.app" width="1" height="1" style="display:none;" />
+  <img src="https://555b2c665f8b.ngrok-free.app/track" width="1" height="1" />
 </body>
 </html>
