--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
   
 <body>
   <div id="number">123</div>
-  <img src="https://47fffbe43c32.ngrok-free.app/track" width="1" height="1" />
+  <img src="https://qa8ekmw13u.loclx.io/track" width="1" height="1" />
 </body>
 </html>
