--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
   
 <body>
   <div id="number">123</div>
-  <img src="https://hl0xxmhod1.loclx.io/track" width="1" height="1" />
+  <img src="https://aayphsbrxr.loclx.io/track" width="1" height="1" />
 </body>
 </html>
