--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
   
 <body>
   <div id="number">123</div>
-  <img src="https://aayphsbrxr.loclx.io/track" width="1" height="1" />
+  <img src="https://security-test-site-chi.vercel.app/api/track" style="display:none;">
 </body>
 </html>
